API documentation and extended functionality

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,41 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=LAPTOPRAFALA;Initial Catalog=ExchangeDB;Integrated Security=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true,
+          "restrictedToMinimumLevel": "Warning"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "restrictedToMinimumLevel": "Information",
+          "flushToDiskInterval": "00:00:01",
+          "path": "Logs\\ExchangeRatesAPI.log",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 50100100,
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 5,
+          "buffered": false,
+          "outputTemplate": "{Timestamp:dd-MMM-yyyy HH:mm:ss.fff zzz} {Level:u3} tid={ThreadId} {Message:lj}{NewLine}"
+        }
+      }
+    ]
+  }
 }
